fixed layout issue post 1440 pixels

--- a/pages/components/Filter/filter.module.scss
+++ b/pages/components/Filter/filter.module.scss
@@ -2,8 +2,7 @@
     background-color: white;
     border-radius: 6px;
     padding: 1rem;
-    margin-top: 1rem;
-    margin-right: 2%;
+    margin-top: 1rem;   
     margin-left: 2%;
 
     span {
@@ -11,16 +10,18 @@
         text-align: center;
         font-size: small;
         text-decoration: underline;
+    }   
+
+
+    h3 {
+        margin: 0 0.5rem 0.5rem;
     }
+
     @media screen and (max-width: 700px) {
         flex: 0 100%;
     }
-  
+
     @media screen and (min-width: 701px) and (max-width : 1024px) {
         flex: 0 50%;
-    }
-
-    @media screen and (min-width: 1025px) {
-        margin-right: 1rem;
     }
 }
